--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,9 +1,58 @@
+@import "./keyframe.scss";
+
 html {
   font-size: 16px;
 }
 
 body {
   background: #fff;
+  position: relative;
+
+  &.finish {
+    &:before {
+      top: -100%;
+    }
+
+    .loading-init-wrapper {
+      display: none;
+    }
+  }
+
+  &:before {
+    width: 100%;
+    height: 100%;
+    content: "";
+    display: block;
+    background: #fff;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    transition: top 0.5s ease;
+  }
+
+  .loading-init-wrapper {
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    position: fixed;
+    z-index: 12;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: calc(50% - 40px);
+
+    .sk-chase-dot {
+      &:before {
+        background: black;
+      }
+    }
+  }
+}
+
+p {
+  text-overflow: clip;
+  white-space: normal;
 }
 
 section {
@@ -15,7 +64,7 @@ section {
   &.above-the-fold {
     height: 100vh;
     overflow: hidden;
-  
+
     video {
       height: 100%;
       width: 100%;
@@ -32,12 +81,73 @@ section {
   right: 10px;
 }
 
-.slick-prev, .slick-next {
+.slick-prev,
+.slick-next {
   width: 50px;
   height: 50px;
   z-index: 10;
 
   &:before {
     font-size: 50px;
+  }
+}
+
+.sk-chase {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  animation: sk-chase 2.5s infinite linear both;
+}
+.sk-chase-dot {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  animation: sk-chase-dot 2s infinite ease-in-out both;
+  &:before {
+    content: "";
+    display: block;
+    width: 25%;
+    height: 25%;
+    background-color: #fff;
+    border-radius: 100%;
+    animation: sk-chase-dot-before 2s infinite ease-in-out both;
+  }
+  &:nth-child(1) {
+    animation-delay: -1.1s;
+    &:before {
+      animation-delay: -1.1s;
+    }
+  }
+  &:nth-child(2) {
+    animation-delay: -1s;
+    &:before {
+      animation-delay: -1s;
+    }
+  }
+  &:nth-child(3) {
+    animation-delay: -0.9s;
+    &:before {
+      animation-delay: -0.9s;
+    }
+  }
+  &:nth-child(4) {
+    animation-delay: -0.8s;
+    &:before {
+      animation-delay: -0.8s;
+    }
+  }
+  &:nth-child(5) {
+    animation-delay: -0.7s;
+    &:before {
+      animation-delay: -0.7s;
+    }
+  }
+  &:nth-child(6) {
+    animation-delay: -0.6s;
+    &:before {
+      animation-delay: -0.6s;
+    }
   }
 }
